Fix text readability.

--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -29,6 +29,14 @@ body {
   box-shadow: inset 0 0 6rem rgba(0, 0, 0, .5);
 }
 
+.text-shadow {
+  text-shadow: 0 .05rem .1rem #000;
+}
+
+.button-shadow {
+  box-shadow: 0 0 .1rem #000;
+}
+
 .moe-container {
   max-width: 42em;
 }
